Fix note box overflowing content area

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2706,7 +2706,6 @@ a.icon_nav_move {
 
 .boxnote {
    margin: 0 auto;
-   width: 950px;
    text-align: left;
    border-radius: 10px;
    background: #e7e7e2;
